--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<h2 id="title">Welcome to Ember</h2>
+<h2 id="title">Ember CLI LocalForage</h2>
 
-{{outlet}}
+<p>This persists across refreshes using Local Forage</p>
+<br/>
+<p><button {{action 'addToTotal'}}>Add To Total</button></p>
+<br/>
+<p>Total: {{total}}</p>
