--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <h2 id="title">Ember CLI LocalForage</h2>
 
 <p>This persists across refreshes using Local Forage</p>
-<br/>
-<p><button {{action 'addToTotal'}}>Add To Total</button></p>
-<br/>
+<br>
+<p><button {{action "addToTotal"}}>Add To Total</button></p>
+<br>
 <p>Total: {{total}}</p>
